--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/cli": "~12.2.12",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^12.11.1",
     "axios": "^0.24.0",
     "jasmine-core": "~3.8.0",
