--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@ngrx/store": "^13.0.2",
+    "angular-code-input": "^1.6.0",
     "antd": "^4.16.13",
     "lodash": "^4.17.21",
     "ng-zorro-antd": "^12.0.2",
