--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
