--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "^13.3.4",
     "@angular/material": "^13.0.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@ngrx/store": "^13.0.2",
+    "@popperjs/core": "^2.11.5",
     "angular-code-input": "^1.6.0",
     "antd": "^4.16.13",
+    "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "ng-zorro-antd": "^12.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -36,6 +41,7 @@
     "@angular-devkit/build-angular": "~12.2.12",
     "@angular/cli": "~12.2.12",
     "@angular/compiler-cli": "~12.2.0",
+    "@faker-js/faker": "^6.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.181",
     "@types/node": "^12.11.1",
