--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@kolkov/angular-editor": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@ngrx/store": "^13.0.2",
     "@popperjs/core": "^2.11.5",
