--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "ng-zorro-antd": "^12.0.2",
+    "ngx-editor": "^12.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
