settting up global scss

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
       "es2018",
       "dom"
     ],
-    "typeRoots" : ["node_modules/@types", "src/types"]
+    "typeRoots" : ["node_modules/@types", "src/types"],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
