--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@apollo/client": "^3.6.2",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@ngrx/store": "^13.0.2",
     "@popperjs/core": "^2.11.5",
     "angular-code-input": "^1.6.0",
     "antd": "^4.16.13",
+    "apollo-angular": "^3.0.1",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
