--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "target": "es2017",
     "module": "es2020",
     "lib": [
-      "es2018",
-      "dom"
+      "es2018", "es6", "dom", "dom.iterable"
     ],
     "typeRoots" : ["node_modules/@types", "src/types"],
     "resolveJsonModule": true,
