--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,12 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies":[
+              "subscriptions-transport-ws"
+            ]
           },
           "configurations": {
             "production": {
