--- a/package.json
+++ b/package.json
@@ -29,14 +29,13 @@
     "@ngrx/store": "^13.0.2",
     "@popperjs/core": "^2.11.5",
     "angular-code-input": "^1.6.0",
-    "antd": "^4.16.13",
     "apollo-angular": "^3.0.1",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
-    "ng-zorro-antd": "^12.0.2",
     "ngx-editor": "^12.2.2",
     "rxjs": "~6.6.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -48,6 +47,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/lodash": "^4.14.181",
     "@types/node": "^12.11.1",
+    "@types/ws": "^8.5.3",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
     "jasmine-core": "~3.8.0",
